--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
-**/src/configs/EnvironmentConfig.ts
+/src/configs/EnvironmentConfig.ts
 yarn.lock
